2010-11-03  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (CRT_DIR): New variable, set by configure.
	* m/amdx86-64.h, m/ibms390x.h (START_FILES, LIB_STANDARD):
	Use $CRT_DIR rather than HAVE_LIB64_DIR.  (Bug#5655)

2010-11-01  Jan Djärv  <jan.h.d@swipnet.se>

	* process.c (kbd_is_on_hold): New variable.
	(hold_keyboard_input, unhold_keyboard_input, kbd_on_hold_p):
	New functions.
	(wait_reading_process_output): If kbd_on_hold_p returns non-zero,
	select on empty input mask.
	(init_process): Initialize kbd_is_on_hold to 0.

	* process.h (hold_keyboard_input, unhold_keyboard_input)
	(kbd_on_hold_p): Declare.

	* keyboard.c (input_available_signal): Declare.
	(kbd_buffer_nr_stored): New function.
	(kbd_buffer_store_event_hold): If kbd_buffer_nr_stored returns
	more than KBD_BUFFER_SIZE/2, stop reding input (Bug#6571).
	(kbd_buffer_get_event): If input is suspended and kbd_buffer_nr_stored
	returns less than KBD_BUFFER_SIZE/4, resume reding input (Bug#6571).
	(tty_read_avail_input): If input is on hold, return.
	Don't read more that free slots in kbd_buffer (Bug#6571).

2010-10-31  Chong Yidong  <cyd@stupidchicken.com>

	* xterm.c (x_connection_closed): Print informative error message
	when aborting on GTK.  This requires using shut_down_emacs
	directly instead of Fkill_emacs.

2010-10-25  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (Fdbus_call_method_asynchronously)
	(Fdbus_register_signal, Fdbus_register_method): Check, whether
	`dbus-registered-objects-table' is initialized.

2010-10-24  Chong Yidong  <cyd@stupidchicken.com>

	* xterm.c (x_connection_closed): Kill Emacs unconditionally.

2010-10-22  Eli Zaretskii  <eliz@gnu.org>

	* frame.c (Fframep, Fwindow_system): Deprecate use as a predicate.

	* dispnew.c (syms_of_display) <initial-window-system, window-system>:
	Deprecate use as a boolean flag.

2010-10-18  Ken Brown  <kbrown@cornell.edu>

	* s/cygwin.h (SIGNALS_VIA_CHARACTERS): New define (bug#7225).

2010-10-15  Kenichi Handa  <handa@m17n.org>
